[package]
name = "host"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
cap-std = { workspace = true }
cap-rand = { workspace = true }
cap-net-ext = { workspace = true }
tokio = { version = "1.22.0", features = [ "rt", "macros" ] }
tracing = { workspace = true }
wasmtime = { version = "7.0.0", features = ["component-model"] }
wasi-common = { path = "../wasi-common" }
wasi-cap-std-sync = { path = "../wasi-common/cap-std-sync" }
clap = { version = "4.1.9", features = ["derive"] }

[dev-dependencies]
test-programs-macros = { path = "../test-programs/macros" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt" ]}
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tempfile = "3.3.0"
