[package]
name = "lightbeam"
version = "0.0.0"
authors = ["The Lightbeam Project Developers"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
categories = ["wasm"]
keywords = ["webassembly", "wasm", "compile", "compiler", "jit"]
publish = false
edition = "2018"

[dependencies]
smallvec = "0.6"
dynasm = "0.5.1"
dynasmrt = "0.5.1"
wasmparser = "0.39.1"
memoffset = "0.5.1"
itertools = "0.8"
capstone = "0.6.0"
failure = "0.1.3"
failure_derive = "0.1.3"
cranelift-codegen = "0.46.1"
multi_mut = "0.1"
either = "1.5"
typemap = "0.3"

[dev-dependencies]
lazy_static = "1.2"
wabt = "0.9.2"
quickcheck = "0.9.0"

[badges]
maintenance = { status = "experimental" }

[features]
bench = []
