[package]
authors = ["The Pulley Project Developers"]
description = "The Pulley interpreter, its bytecode definition, encoder, decoder, and etc..."
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0 WITH LLVM-exception"
name = "pulley-interpreter"
readme = "./README.md"
repository = "https://github.com/bytecodealliance/wasmtime/tree/main/pulley"
version = "0.2.0"

[lints]
workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true }
cranelift-bitset = { workspace = true } 
log = { workspace = true }
sptr = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }

[features]
std = []
arbitrary = ["dep:arbitrary", "arbitrary/derive", "std", "cranelift-bitset/arbitrary"]
encode = []
decode = []
disas = ["decode"]
interp = ["decode"]

[package.metadata.docs.rs]
all-features = true
