[package]
name = "wasi-common"
version.workspace = true
authors.workspace = true
description = "WASI implementation in Rust"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/bytecodealliance/wasmtime"
readme = "README.md"
edition.workspace = true
include = ["src/**/*", "WASI/phases/**/*", "README.md", "LICENSE"]
publish = false

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
cap-std = { workspace = true }
cap-rand = { workspace = true }
cap-fs-ext = { workspace = true }
cap-net-ext = { workspace = true }
bitflags = { workspace = true }
async-trait = { workspace = true }
system-interface = { workspace = true }
ipnet = { workspace = true }
rustix = { workspace = true, features = ["net"] }

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true, features = ["fs"] }

[target.'cfg(windows)'.dependencies]
io-extras = "0.17.1"

[target.'cfg(windows)'.dependencies.windows-sys]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["trace_log"]
# This feature enables the `tracing` logs in the calls to target the `log`
# ecosystem of backends (e.g. `env_logger`. Disable this if you want to use
# `tracing-subscriber`.
trace_log = [ "tracing/log" ]
