[package]
name = "wasmtime-api"
authors = ["The Wasmtime Project Developers"]
version = "0.1.0"
description = "High-level API to expose the Wasmtime runtime"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/CraneStation/wasmtime"
edition = "2018"

[lib]
name = "wasmtime_api"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
cranelift-codegen = { version = "0.41.0", features = ["enable-serde"] }
cranelift-native = "0.41.0"
cranelift-entity = { version = "0.41.0", features = ["enable-serde"] }
cranelift-wasm = { version = "0.41.0", features = ["enable-serde"] }
cranelift-frontend = "0.41.0"
wasmtime-runtime = { path="../wasmtime-runtime" }
wasmtime-environ = { path="../wasmtime-environ" }
wasmtime-jit = { path="../wasmtime-jit" }
wasmparser = "0.36"
failure = { version = "0.1.3", default-features = false }
failure_derive = { version = "0.1.3", default-features = false }
target-lexicon = { version = "0.4.0", default-features = false }
region = "2.0.0"

[features]
default = []
wasm-c-api = []

[dev-dependencies]
# for wasmtime.rs
wasi-common = { git = "https://github.com/CraneStation/wasi-common", rev = "8ea7a98"}
docopt = "1.0.1"
serde = { "version" = "1.0.94", features = ["derive"] }
pretty_env_logger = "0.3.0"
wabt = "0.9.0"
wasmtime-wast = { path="../wasmtime-wast" }
wasmtime-wasi = { path="../wasmtime-wasi" }
rayon = "1.1"
file-per-thread-logger = "0.1.1"
