[package]
name = "wasmtime-debug"
version = "0.2.0"
authors = ["The Wasmtime Project Developers"]
description = "Debug utils for WebAsssembly code in Cranelift"
repository = "https://github.com/CraneStation/wasmtime"
documentation = "https://docs.rs/wasmtime-debug/"
categories = ["wasm"]
keywords = ["webassembly", "wasm", "debuginfo"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition = "2018"

[dependencies]
gimli = "0.19.0"
wasmparser = { version = "0.36.0" }
cranelift-codegen = { version = "0.41.0", features = ["enable-serde"] }
cranelift-entity = { version = "0.41.0", features = ["enable-serde"] }
cranelift-wasm = { version = "0.41.0", features = ["enable-serde"] }
faerie = "0.10.1"
wasmtime-environ = { path = "../wasmtime-environ", default-features = false }
target-lexicon = { version = "0.4.0", default-features = false }
failure = { version = "0.1.3", default-features = false }
failure_derive = { version = "0.1.3", default-features = false }

[features]
default = ["std"]
std = ["cranelift-codegen/std", "cranelift-wasm/std", "wasmtime-environ/std"]
core = ["cranelift-codegen/core", "cranelift-wasm/core"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "CraneStation/wasmtime" }
