[package]
name = "wasmtime-hostmodule"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
edition = "2018"

[dependencies]
hlist = "0.1"
cranelift-codegen = "0.30.0"
cranelift-native = "0.30.0"
cranelift-wasm = "0.30.0"
cranelift-entity = "0.30.0"
wasmtime-jit = { path = "../wasmtime-jit" }
wasmtime-runtime = { path = "../wasmtime-runtime" }
wasmtime-environ = { path = "../wasmtime-environ" }
target-lexicon = "0.3.0"
