[package]
name = "wasmtime-interface-types"
version = "0.2.0"
authors = ["The Wasmtime Project Developers"]
description = "Support for wasm interface types with wasmtime"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/CraneStation/wasmtime"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition = "2018"

[dependencies]
cranelift-codegen = { version = "0.44.0", default-features = false }
failure = { version = "0.1", default-features = false }
walrus = "0.12.0"
wasmparser = { version = "0.39.1", default-features = false }
wasm-webidl-bindings = "0.5.0"
wasmtime-jit = { path = '../wasmtime-jit', default-features = false }
wasmtime-runtime = { path = '../wasmtime-runtime', default-features = false }
