[package]
name = "wasmtime-jit"
version = "0.1.0"
authors = ["The Wasmtime Project Developers"]
publish = false
description = "JIT-style execution for WebAsssembly code in Cranelift"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/CraneStation/wasmtime"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition = "2018"

[dependencies]
cranelift-codegen = "0.29.0"
cranelift-entity = "0.29.0"
cranelift-wasm = "0.29.0"
cranelift-frontend = "0.29.0"
wasmtime-environ = { path = "../wasmtime-environ", default-features = false }
wasmtime-runtime = { path = "../wasmtime-runtime", default-features = false }
wasmtime-debug = { path = "../wasmtime-debug", default-features = false }
region = "2.0.0"
failure = { version = "0.1.3", default-features = false }
failure_derive = { version = "0.1.3", default-features = false }
target-lexicon = { version = "0.3.0", default-features = false }
hashbrown = { version = "0.1.8", optional = true }
wasmparser = "0.29.2"

[features]
default = ["std"]
std = ["cranelift-codegen/std", "cranelift-wasm/std"]
core = ["hashbrown/nightly", "cranelift-codegen/core", "cranelift-wasm/core", "wasmtime-environ/core"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "CraneStation/wasmtime" }
