[package]
name = "wasmtime-obj"
version = "0.2.0"
authors = ["The Wasmtime Project Developers"]
description = "Native object file output for WebAsssembly code in Wasmtime"
repository = "https://github.com/CraneStation/wasmtime"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition = "2018"

[dependencies]
cranelift-codegen = { path = "../../cranelift/cranelift-codegen", features = ["enable-serde"] }
cranelift-entity = { path = "../../cranelift/cranelift-entity", features = ["enable-serde"] }
cranelift-wasm = { path = "../../cranelift/cranelift-wasm", features = ["enable-serde"] }
wasmtime-environ = { path = "../wasmtime-environ" }
faerie = "0.10.1"
