[package]
name = "wasmtime-wasi-c"
version = "0.0.0"
authors = ["The Cranelift Project Developers"]
publish = false
description = "WASI API support for Wasmtime"
categories = ["wasm"]
repository = "https://github.com/CraneStation/wasmtime"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"

[dependencies]
wasmtime-runtime = { path = "../wasmtime-runtime" }
wasmtime-environ = { path = "../wasmtime-environ" }
wasmtime-jit = { path = "../wasmtime-jit" }
cranelift-codegen = "0.30.0"
cranelift-entity = "0.30.0"
cranelift-wasm = "0.30.0"
target-lexicon = "0.3.0"
log = { version = "0.4.6", default-features = false }
libc = "0.2.50"

[build-dependencies]
cmake = "0.1.35"
bindgen = "0.49.0"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "CraneStation/wasmtime" }
