[package]
name = "wasmtime-wasi-c"
version = "0.2.0"
authors = ["The Cranelift Project Developers"]
description = "WASI API support for Wasmtime"
categories = ["wasm"]
repository = "https://github.com/CraneStation/wasmtime"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"

[dependencies]
wasmtime-runtime = { path = "../wasmtime-runtime" }
wasmtime-environ = { path = "../wasmtime-environ" }
wasmtime-jit = { path = "../wasmtime-jit" }
cranelift-codegen = { version = "0.41.0", features = ["enable-serde"] }
cranelift-entity = { version = "0.41.0", features = ["enable-serde"] }
cranelift-wasm = { version = "0.41.0", features = ["enable-serde"] }
target-lexicon = "0.4.0"
log = { version = "0.4.8", default-features = false }
libc = "0.2.60"

[build-dependencies]
cmake = "0.1.35"
bindgen = "0.51.0"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "CraneStation/wasmtime" }
