[package]
name = "wasmtime-wasi"
version = "0.3.0"
authors = ["The Cranelift Project Developers"]
description = "WASI API support for Wasmtime"
categories = ["wasm"]
repository = "https://github.com/CraneStation/wasmtime"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"

[dependencies]
wasmtime-runtime = { path = "../wasmtime-runtime", version = "0.3.0" }
wasmtime-environ = { path = "../wasmtime-environ", version = "0.3.0" }
wasmtime-jit = { path = "../wasmtime-jit", version = "0.3.0" }
wasi-common = "0.2.0"
cranelift-codegen = { version = "0.40.0", features = ["enable-serde"] }
cranelift-entity = { version = "0.40.0", features = ["enable-serde"] }
cranelift-wasm = { version = "0.40.0", features = ["enable-serde"] }
target-lexicon = "0.4.0"
log = { version = "0.4.8", default-features = false }

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "CraneStation/wasmtime" }
