[package]
name = "wasmtime-wasi"
version = "0.2.0"
authors = ["The Cranelift Project Developers"]
description = "WASI API support for Wasmtime"
categories = ["wasm"]
repository = "https://github.com/CraneStation/wasmtime"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"

[dependencies]
wasmtime-runtime = { path = "../wasmtime-runtime" }
wasmtime-environ = { path = "../wasmtime-environ" }
wasmtime-jit = { path = "../wasmtime-jit" }
wasi-common = { git = "https://github.com/CraneStation/wasi-common", rev = "8ea7a983d8b1364e5f62d2adf0e74b3b8db1c9b3"}
cranelift-codegen = { version = "0.41.0", features = ["enable-serde"] }
cranelift-entity = { version = "0.41.0", features = ["enable-serde"] }
cranelift-wasm = { version = "0.41.0", features = ["enable-serde"] }
target-lexicon = "0.4.0"
log = { version = "0.4.8", default-features = false }

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "CraneStation/wasmtime" }
