[package]
name = "wasmtime-wast"
version = "0.2.0"
authors = ["The Wasmtime Project Developers"]
publish = false
description = "wast testing support for wasmtime"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/CraneStation/wasmtime"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition = "2018"

[dependencies]
cranelift-codegen = { version = "0.40.0", features = ["enable-serde"] }
cranelift-wasm = { version = "0.40.0", features = ["enable-serde"] }
cranelift-entity = { version = "0.40.0", features = ["enable-serde"] }
wasmtime-jit = { path = "../wasmtime-jit" }
wasmtime-runtime = { path = "../wasmtime-runtime" }
wasmtime-environ = { path = "../wasmtime-environ" }
wabt = "0.9.1"
target-lexicon = "0.4.0"
failure = { version = "0.1.3", default-features = false }
failure_derive = { version = "0.1.3", default-features = false }

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "CraneStation/wasmtime" }
