[package]
name = "winch-tools"
version = "0.0.0"
description = "Binaries for testing Winch"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasmtime"
publish = false
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "winch-tools"
path = "src/main.rs"

[dependencies]
winch-codegen = { workspace = true }
winch-filetests = { workspace = true }
winch-test-macros = { workspace = true }
wasmtime-environ = { workspace = true }
target-lexicon = { workspace = true }
anyhow = { workspace = true }
wasmparser = { workspace = true }
clap = { workspace = true, features = ['default'] }
wat = { workspace = true }
cranelift-codegen = { workspace = true }
capstone = { workspace = true }
similar = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
glob = { workspace = true }

[features]
default = ["all-arch"]
all-arch = ["winch-codegen/all-arch"]
