[package]
name = "cranelift-codegen-meta"
authors = ["The Cranelift Project Developers"]
version = "0.37.0"
description = "Metaprogram for cranelift-codegen code generator library"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/CraneStation/cranelift"
readme = "README.md"
edition = "2018"

[dependencies]
cranelift-entity = { path = "../../cranelift-entity", version = "0.37.0", default-features = false }

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "CraneStation/cranelift" }

[features]
default = ["std"]
std = ["cranelift-entity/std"]
# The "core" feature enables a workaround for Cargo #4866.
core = ["cranelift-entity/core"]
